Ferrospring, Obsidian and Tidepool

--- a/planetary_diversity/localisation/braz_por/planetarydiversity_planet_classes_l_braz_por.yml
+++ b/planetary_diversity/localisation/braz_por/planetarydiversity_planet_classes_l_braz_por.yml
@@ -111,6 +111,12 @@
  mod_pc_pd_columnar_habitability: "Ocean Habitability"
  trait_pc_pd_columnar_preference: "Ocean Preference"
  trait_pc_pd_columnar_preference_desc: "$trait_pc_arctic_preference_desc$"
+ pc_pd_tidepool: "Tidepool World"
+ pc_pd_tidepool_desc: "A rocky oceanic world with a nitrogen-oxygen atmosphere and shallow seas. Daily tidal shifts expose vast fields of tidepools, creating dynamic littoral ecosystems that support a diverse array of marine life."
+ pc_pd_tidepool_adj: "shallowed"
+ mod_pc_pd_tidepool_habitability: "Ocean Habitability"
+ trait_pc_pd_tidepool_preference: "Ocean Preference"
+ trait_pc_pd_tidepool_preference_desc: "$trait_pc_arctic_preference_desc$"
  pc_pd_reef: "Mundo Recifes"
  pc_pd_reef_desc: "Mundo temperado rochoso com atmosfera de nitrogênio-oxigênio e uma hidrosfera significativa. Os oceanos rasos cobrem mais de 99% da superfície e os sistemas de recifes significativos abaixo da superfície podem ser vistos em órbita. As únicas áreas acima da água são onde o sistema de recifes cresceu o suficiente para criar cadeias de ilhas de coral dispersas."
  pc_pd_reef_adj: "arrecife"
@@ -167,6 +173,12 @@
  mod_pc_pd_lilypad_habitability: "Habitabilidade Tropical"
  trait_pc_pd_lilypad_preference: "Preferência Tropical"
  trait_pc_pd_lilypad_preference_desc: "$trait_pc_arctic_preference_desc$"
+ pc_pd_obsidian: "Obsidian World"
+ pc_pd_obsidian_desc: "This humid world has a nitrogen-oxygen atmosphere and shallow tropical seas bordered by extensive obsidian deposits, with resilient flora established across the humid volcanic terrain."
+ pc_pd_obsidian_adj: "obsidian"
+ mod_pc_pd_obsidian_habitability: "Tropical Habitability"
+ trait_pc_pd_obsidian_preference: "Tropical Preference"
+ trait_pc_pd_obsidian_preference_desc: "$trait_pc_arctic_preference_desc$"
  pc_pd_geothermal: "Mundo Geotérmico"
  pc_pd_geothermal_desc: "Um planeta frio e gelado com fendas tropicais que quebram as extensões de gelo, aquecido por ventos geotermais naturais com uma atmosfera de nitrogênio-oxigênio. A hidrosfera está na água derretida e no vapor que sobe dos ventos."
  pc_pd_geothermal_adj: "geotérmico"
@@ -385,6 +397,12 @@
  mod_pc_pd_ice_dunes_habitability: "Habitabilidade Ártica"
  trait_pc_pd_ice_dunes_preference: "Preferência Ártica"
  trait_pc_pd_ice_dunes_preference_desc: "$trait_pc_arctic_preference_desc$"
+ pc_pd_ferrospring: "Ferrosprings World"
+ pc_pd_ferrospring_desc: "Frigid, rocky world with a nitrogen-oxygen atmosphere, its icy crust is fractured by geothermal activity. Subsurface aquifers rich in iron deposits feed surface springs and lakes, staining the waters a deep red against the frozen terrain."
+ pc_pd_ferrospring_adj: "icey"
+ mod_pc_pd_ferrospring_habitability: "Arctic Habitability"
+ trait_pc_pd_ferrospring_preference: "Arctic Preference"
+ trait_pc_pd_ferrospring_preference_desc: "$trait_pc_arctic_preference_desc$"
  pc_pd_storm: "Mundo Tempestade"
  pc_pd_storm_desc: "Mundo frígido e rochoso com uma atmosfera de nitrogênio-oxigênio, este planeta tem uma hidrosfera forte. As massas terrestres do planeta encontram-se em ambos os pólos, separadas por um enorme oceano que gera poderosas tempestades durante todo o ano. Devido às condições extremas, a maior parte da vida do planeta está sob a superfície do oceano."
  pc_pd_storm_adj: "tempestuoso"
