--- a/planetary_diversity/localisation/braz_por/planetarydiversity_planet_modifiers_l_braz_por.yml
+++ b/planetary_diversity/localisation/braz_por/planetarydiversity_planet_modifiers_l_braz_por.yml
@@ -44,6 +44,8 @@
  pd_algae_desc: "Os ricos mares e lagos rasos deste planeta sustentam a proliferação de algas cor-de-rosa brilhantes, criando um espetáculo visual impressionante que pode ser visto do espaço."
  pd_columnar: "$pc_pd_columnar$"
  pd_columnar_desc: "$pc_pd_columnar_desc$"
+ pd_tidepool: "$pc_pd_tidepool$"
+ pd_tidepool_desc: "$pc_pd_tidepool_desc$"
  pd_reef: "Mundo Recifes"
  pd_reef_desc: "Extensos oceanos rasos envolvem todo o planeta, expondo sistemas de recifes significativos logo abaixo da superfície quando observados em órbita. Cadeias de ilhas formadas por corais emergem onde os recifes rompem a linha d'água."
  pd_archipelago: "Mundo Arquipélago"
@@ -66,6 +68,8 @@
  pd_aerial_desc: "Bem acima das massas de terra cobertas por vegetação densa, colossais vagens de sementes, transportadas pela flora única do planeta, deslizam pelos céus como nuvens."
  pd_lilypad: "Mundo Aguapé"
  pd_lilypad: "Os oceanos quentes e rasos deste planeta sustentam uma biodiversidade vibrante. Na superfície, folhas robustas da flora aquática formam um ecossistema secundário."
+ pd_obsidian: "$pc_pd_obsidian$"
+ pd_obsidian_desc: "$pc_pd_obsidian_desc$"
  pd_geothermal: "Mundo Geotérmico"
  pd_geothermal_desc: "Neste planeta, fendas tropicais vibrantes emergem entre imponentes falésias de gelo. Abaixo da superfície, uma potente atividade geotérmica sustenta milhões de piscinas quentes, alimentando uma biodiversidade próspera."
  pd_biolumen: "Mundo Bioluminescente"
@@ -156,6 +160,8 @@
  pd_crevasse_desc: "Embora a superfície deste planeta congelado seja inóspita, a energia geotérmica do núcleo do planeta mantém habitável o fundo das muitas fendas do planeta."
  pd_ice_dunes: "Mundo Dunas Gélidas"
  pd_ice_dunes_desc: "Com temperaturas abaixo de zero na maior parte do ano, partículas de gelo semelhantes a areia criam as dunas deste planeta."
+ pd_ferrospring: "$pc_pd_ferrospring$"
+ pd_ferrospring_desc: "$pc_pd_ferrospring_desc$"
  pd_storm: "Mundo Tempestade"
  pd_storm_desc: "As massas terrestres do planeta encontram-se em ambos os pólos, separadas por um enorme oceano que gera poderosas tempestades durante todo o ano. Devido às condições extremas, a maior parte da vida do planeta está sob a superfície do oceano."
  pd_iceberg: "Mundo Iceberg"
