--- a/planetary_diversity/localisation/english/planetarydiversity_planet_classes_l_english.yml
+++ b/planetary_diversity/localisation/english/planetarydiversity_planet_classes_l_english.yml
@@ -111,6 +111,12 @@
  mod_pc_pd_columnar_habitability: "Ocean Habitability"
  trait_pc_pd_columnar_preference: "Ocean Preference"
  trait_pc_pd_columnar_preference_desc: "$trait_pc_arctic_preference_desc$"
+ pc_pd_tidepool: "Tidepool World"
+ pc_pd_tidepool_desc: "A rocky oceanic world with a nitrogen-oxygen atmosphere and shallow seas. Daily tidal shifts expose vast fields of tidepools, creating dynamic littoral ecosystems that support a diverse array of marine life."
+ pc_pd_tidepool_adj: "shallowed"
+ mod_pc_pd_tidepool_habitability: "Ocean Habitability"
+ trait_pc_pd_tidepool_preference: "Ocean Preference"
+ trait_pc_pd_tidepool_preference_desc: "$trait_pc_arctic_preference_desc$"
  pc_pd_reef: "Reef World"
  pc_pd_reef_desc: "Rocky temperate world with a nitrogen-oxygen atmosphere and a significant hydrosphere. Shallow oceans cover more than 99% of the surface and the under the surface significant reef systems can be seen from orbit. The only areas above water are where the reef system has grown high enough to create scattered island chains of coral."
  pc_pd_reef_adj: "reefed"
@@ -167,6 +173,12 @@
  mod_pc_pd_lilypad_habitability: "Tropical Habitability"
  trait_pc_pd_lilypad_preference: "Tropical Preference"
  trait_pc_pd_lilypad_preference_desc: "$trait_pc_arctic_preference_desc$"
+ pc_pd_obsidian: "Obsidian World"
+ pc_pd_obsidian_desc: "This humid world has a nitrogen-oxygen atmosphere and shallow tropical seas bordered by extensive obsidian deposits, with resilient flora established across the volcanic terrain."
+ pc_pd_obsidian_adj: "obsidian"
+ mod_pc_pd_obsidian_habitability: "Tropical Habitability"
+ trait_pc_pd_obsidian_preference: "Tropical Preference"
+ trait_pc_pd_obsidian_preference_desc: "$trait_pc_arctic_preference_desc$"
  pc_pd_geothermal: "Geothermal World"
  pc_pd_geothermal_desc: "Cold, icy planet with tropical rifts that break up the expanses of ice, heated by natural geothermal vents with a nitrogen-oxygen atmosphere. The hydrosphere is in melt water and steam rising from vents."
  pc_pd_geothermal_adj: "geothermal"
@@ -397,6 +409,12 @@
  mod_pc_pd_ice_dunes_habitability: "Arctic Habitability"
  trait_pc_pd_ice_dunes_preference: "Arctic Preference"
  trait_pc_pd_ice_dunes_preference_desc: "$trait_pc_arctic_preference_desc$"
+ pc_pd_ferrospring: "Ferrosprings World"
+ pc_pd_ferrospring_desc: "Frigid, rocky world with a nitrogen-oxygen atmosphere, its icy crust is fractured by geothermal activity. Subsurface aquifers rich in iron deposits feed surface springs and lakes, staining the waters a deep red against the frozen terrain."
+ pc_pd_ferrospring_adj: "icey"
+ mod_pc_pd_ferrospring_habitability: "Arctic Habitability"
+ trait_pc_pd_ferrospring_preference: "Arctic Preference"
+ trait_pc_pd_ferrospring_preference_desc: "$trait_pc_arctic_preference_desc$"
  pc_pd_storm: "Storm World"
  pc_pd_storm_desc: "Frigid, rocky world with a nitrogen-oxygen atmosphere, this planet has a strong hydrosphere. The planet's land masses are found at either pole, separated by a massive ocean that generates powerful storms year-round. Due to the extreme conditions, most of the planet's life is under the ocean's surface."
  pc_pd_storm_adj: "stormy"
