--- a/planetary_diversity/localisation/french/planetarydiversity_planet_classes_l_french.yml
+++ b/planetary_diversity/localisation/french/planetarydiversity_planet_classes_l_french.yml
@@ -112,6 +112,12 @@ trait_pc_pd_algae_preference_desc: "$trait_pc_arctic_preference_desc$"
  mod_pc_pd_columnar_habitability: "Ocean Habitability"
  trait_pc_pd_columnar_preference: "Ocean Preference"
  trait_pc_pd_columnar_preference_desc: "$trait_pc_arctic_preference_desc$"
+ pc_pd_tidepool: "Tidepool World"
+ pc_pd_tidepool_desc: "A rocky oceanic world with a nitrogen-oxygen atmosphere and shallow seas. Daily tidal shifts expose vast fields of tidepools, creating dynamic littoral ecosystems that support a diverse array of marine life."
+ pc_pd_tidepool_adj: "shallowed"
+ mod_pc_pd_tidepool_habitability: "Ocean Habitability"
+ trait_pc_pd_tidepool_preference: "Ocean Preference"
+ trait_pc_pd_tidepool_preference_desc: "$trait_pc_arctic_preference_desc$"
 pc_pd_reef: "Monde de Récifs"
 pc_pd_reef_desc: "Monde rocheux tempéré avec une atmosphère à base d'azote et d'oxygène et une hydrosphère significative. Les océans peu profonds recouvrent plus de 99% de la surface et sous la surface, des systèmes de récifs significatifs peuvent être vus depuis l'orbite. Les seules zones émergées sont là où le système de récifs a atteint une hauteur suffisante pour créer des chaînes d'îles coralliennes éparpillées."
 pc_pd_reef_adj: "récifal"
@@ -168,6 +174,13 @@ pc_pd_lilypad_adj: "flottant"
 mod_pc_pd_lilypad_habitability: "Habitabilité Tropicale"
 trait_pc_pd_lilypad_preference: "Préférence Tropicale"
 trait_pc_pd_lilypad_preference_desc: "$trait_pc_arctic_preference_desc$"
+ pc_pd_obsidian: "Obsidian World"
+ pc_pd_obsidian_desc: " pc_pd_obsidian_desc: "This humid world has a nitrogen-oxygen atmosphere and shallow tropical seas bordered by extensive obsidian deposits, with resilient flora established across the volcanic terrain."
+"
+ pc_pd_obsidian_adj: "obsidian"
+ mod_pc_pd_obsidian_habitability: "Tropical Habitability"
+ trait_pc_pd_obsidian_preference: "Tropical Preference"
+ trait_pc_pd_obsidian_preference_desc: "$trait_pc_arctic_preference_desc$"
 pc_pd_geothermal: "Monde Géothermique"
 pc_pd_geothermal_desc: "Planète froide et glaciale avec des rifts tropicaux qui brisent les étendues de glace, chauffés par des évents géothermiques naturels avec une atmosphère à base d'azote et d'oxygène. L'hydrosphère est en eau de fonte et en vapeur montant des évents."
 pc_pd_geothermal_adj: "géothermique"
@@ -398,6 +411,12 @@ pc_pd_ice_dunes_adj: "glacial"
 mod_pc_pd_ice_dunes_habitability: "Habitabilité Arctique"
 trait_pc_pd_ice_dunes_preference: "Préférence Arctique"
 trait_pc_pd_ice_dunes_preference_desc: "$trait_pc_arctic_preference_desc$"
+ pc_pd_ferrospring: "Ferrosprings World"
+ pc_pd_ferrospring_desc: "Frigid, rocky world with a nitrogen-oxygen atmosphere, its icy crust is fractured by geothermal activity. Subsurface aquifers rich in iron deposits feed surface springs and lakes, staining the waters a deep red against the frozen terrain."
+ pc_pd_ferrospring_adj: "icey"
+ mod_pc_pd_ferrospring_habitability: "Arctic Habitability"
+ trait_pc_pd_ferrospring_preference: "Arctic Preference"
+ trait_pc_pd_ferrospring_preference_desc: "$trait_pc_arctic_preference_desc$"
 pc_pd_storm: "Monde de Tempêtes"
 pc_pd_storm_desc: "Monde rocheux froid avec une atmosphère à base d'azote et d'oxygène, cette planète a une forte hydrosphère. Les masses terrestres de la planète se trouvent aux pôles, séparées par un océan massif qui génère des tempêtes puissantes toute l'année. En raison des conditions extrêmes, la majeure partie de la vie de la planète se trouve sous la surface de l'océan."
 pc_pd_storm_adj: "tempétueux"
