--- a/planetary_diversity/localisation/french/planetarydiversity_planet_modifiers_l_french.yml
+++ b/planetary_diversity/localisation/french/planetarydiversity_planet_modifiers_l_french.yml
@@ -45,6 +45,8 @@ pd_algae: "Monde des Algues Roses"
 pd_algae_desc: "Les riches mers peu profondes et lacs de cette planète soutiennent des floraisons brillantes d'algues roses, créant un spectacle visuel impressionnant visible depuis l'espace."
  pd_columnar: "$pc_pd_columnar$"
  pd_columnar_desc: "$pc_pd_columnar_desc$"
+ pd_tidepool: "$pc_pd_tidepool$"
+ pd_tidepool_desc: "$pc_pd_tidepool_desc$"
 pd_reef: "Monde des Récifs"
 pd_reef_desc: "Des systèmes de récifs étendus visibles depuis l'orbite forment les seuls massifs terrestres de la planète, avec des chaînes d'îles dispersées créées là où le corail a poussé au-dessus du niveau de l'eau."
 pd_archipelago: "Monde Archipélagique"
@@ -67,6 +69,8 @@ pd_aerial: "Monde de Graines Aériennes"
 pd_aerial_desc: "Bien au-dessus des masses terrestres recouvertes d'une végétation dense, d'énormes capsules de graines, portées par la flore unique de la planète, glissent à travers le ciel comme des nuages."
 pd_lilypad: "Monde de Nénuphars"
 pd_lilypad_desc: "Les océans chauds et peu profonds de cette planète soutiennent une biodiversité vibrante. À la surface, des feuilles robustes de la flore aquatique forment un écosystème secondaire basé sur la surface."
+ pd_obsidian: "$pc_pd_obsidian$"
+ pd_obsidian_desc: "$pc_pd_obsidian_desc$"
 pd_geothermal: "Monde Géothermique"
 pd_geothermal_desc: "Des rifts tropicaux qui brisent les étendues de glace, chauffés par des évents géothermiques naturels avec une atmosphère d'azote et d'oxygène. L'hydrosphère est constituée d'eau de fonte et de vapeur montant des évents."
 pd_biolumen: "Monde Bioluminescent"
@@ -157,6 +161,8 @@ pd_crevasse: "Monde de Crevasses"
 pd_crevasse_desc: "Alors que la surface de cette planète gelée est inhospitalière, l'énergie géothermique provenant du noyau planétaire maintient habitables le fond de ses nombreuses crevasses."
 pd_ice_dunes: "Monde de Dunes de Glace"
 pd_ice_dunes_desc: "Avec des températures sous le point de congélation la plupart de l'année, des particules de glace semblables au sable créent les dunes de cette planète."
+ pd_ferrospring: "$pc_pd_ferrospring$"
+ pd_ferrospring_desc: "$pc_pd_ferrospring_desc$"
 pd_storm: "Tempête"
 pd_storm_desc: "Les masses terrestres de la planète se trouvent à l'un ou l'autre pôle, séparées par un océan massif qui génère des tempêtes puissantes toute l'année. En raison des conditions extrêmes, la majeure partie de la vie de la planète se trouve sous la surface de l'océan."
 pd_iceberg: "Monde d'Icebergs"
