--- a/planetary_diversity/localisation/german/planetarydiversity_planet_classes_l_german.yml
+++ b/planetary_diversity/localisation/german/planetarydiversity_planet_classes_l_german.yml
@@ -111,6 +111,12 @@
  mod_pc_pd_columnar_habitability: "Ocean Habitability"
  trait_pc_pd_columnar_preference: "Ocean Preference"
  trait_pc_pd_columnar_preference_desc: "$trait_pc_arctic_preference_desc$"
+ pc_pd_tidepool: "Tidepool World"
+ pc_pd_tidepool_desc: "A rocky oceanic world with a nitrogen-oxygen atmosphere and shallow seas. Daily tidal shifts expose vast fields of tidepools, creating dynamic littoral ecosystems that support a diverse array of marine life."
+ pc_pd_tidepool_adj: "shallowed"
+ mod_pc_pd_tidepool_habitability: "Ocean Habitability"
+ trait_pc_pd_tidepool_preference: "Ocean Preference"
+ trait_pc_pd_tidepool_preference_desc: "$trait_pc_arctic_preference_desc$"
  pc_pd_reef: "Riffwelt"
  pc_pd_reef_desc: "Felsige gemäßigte Welt mit einer Stickstoff-Sauerstoff-Atmosphäre und einer bedeutenden Hydrosphäre. Flache Ozeane bedecken mehr als §Y99%§! der Oberfläche und die unter der Oberfläche liegenden bedeutenden Riffsysteme sind aus der Umlaufbahn sichtbar. Die einzigen Bereiche über Wasser sind dort, wo das Riffsystem hoch genug gewachsen ist, um verstreute Inselketten aus Korallen zu bilden."
  pc_pd_reef_adj: "gerifft"
@@ -179,6 +185,13 @@
  mod_pc_pd_lilypad_habitability: "Bewohnbarkeit (Tropisch)"
  trait_pc_pd_lilypad_preference: "Anpassung (Tropisch)"
  trait_pc_pd_lilypad_preference_desc: "$trait_pc_arctic_preference_desc$"
+ pc_pd_obsidian: "Obsidian World"
+ pc_pd_obsidian_desc: " pc_pd_obsidian_desc: "This humid world has a nitrogen-oxygen atmosphere and shallow tropical seas bordered by extensive obsidian deposits, with resilient flora established across the volcanic terrain."
+"
+ pc_pd_obsidian_adj: "obsidian"
+ mod_pc_pd_obsidian_habitability: "Tropical Habitability"
+ trait_pc_pd_obsidian_preference: "Tropical Preference"
+ trait_pc_pd_obsidian_preference_desc: "$trait_pc_arctic_preference_desc$"
  pc_pd_geothermal: "Geothermische Welt"
  pc_pd_geothermal_desc: "Kalter, eisiger Planet mit tropischen Spalten, die die Eisflächen aufbrechen, beheizt durch natürliche geothermische Quellen mit einer Stickstoff-Sauerstoff-Atmosphäre. Die Hydrosphäre besteht aus Schmelzwasser und Dampf, der aus den Quellen aufsteigt."
  pc_pd_geothermal_adj: "geothermisch"
@@ -397,6 +410,12 @@
  mod_pc_pd_ice_dunes_habitability: "Bewohnbarkeit (Arktisch)"
  trait_pc_pd_ice_dunes_preference: "Anpassung (Arktisch)"
  trait_pc_pd_ice_dunes_preference_desc: "$trait_pc_arctic_preference_desc$"
+ pc_pd_ferrospring: "Ferrosprings World"
+ pc_pd_ferrospring_desc: "Frigid, rocky world with a nitrogen-oxygen atmosphere, its icy crust is fractured by geothermal activity. Subsurface aquifers rich in iron deposits feed surface springs and lakes, staining the waters a deep red against the frozen terrain."
+ pc_pd_ferrospring_adj: "icey"
+ mod_pc_pd_ferrospring_habitability: "Arctic Habitability"
+ trait_pc_pd_ferrospring_preference: "Arctic Preference"
+ trait_pc_pd_ferrospring_preference_desc: "$trait_pc_arctic_preference_desc$"
  pc_pd_storm: "Sturmwelt"
  pc_pd_storm_desc: "Dieser Planet ist eine eiskalte, felsige Welt mit einer Stickstoff-Sauerstoff-Atmosphäre und einer starken Hydrosphäre. Die Landmassen des Planeten befinden sich an beiden Polen und sind durch einen riesigen Ozean voneinander getrennt, der das ganze Jahr über starke Stürme erzeugt. Aufgrund der extremen Bedingungen befindet sich das meiste Leben des Planeten unter der Meeresoberfläche."
  pc_pd_storm_adj: "stürmisch"
