--- a/planetary_diversity/localisation/german/planetarydiversity_planet_modifiers_l_german.yml
+++ b/planetary_diversity/localisation/german/planetarydiversity_planet_modifiers_l_german.yml
@@ -44,6 +44,8 @@
  pd_algae_desc: "Die üppigen flachen Meere und Seen dieses Planeten beherbergen leuchtend rosa Algenblüten und erzeugen ein atemberaubendes visuelles Schauspiel, das vom Weltraum aus sichtbar ist."
  pd_columnar: "$pc_pd_columnar$"
  pd_columnar_desc: "$pc_pd_columnar_desc$"
+ pd_tidepool: "$pc_pd_tidepool$"
+ pd_tidepool_desc: "$pc_pd_tidepool_desc$"
  pd_reef: "Riffwelt"
  pd_reef_desc: "Ausgedehnte flache Ozeane umhüllen den gesamten Planeten und legen bei Beobachtung aus der Umlaufbahn bedeutende Riffsysteme knapp unter der Oberfläche frei. Dort, wo die Riffe die Wasserlinie durchbrechen, entstehen aus Korallen gebildete Inselketten."
  pd_archipelago: "Archipel Welt"
@@ -66,6 +68,8 @@
  pd_aerial_desc: "Hoch über den von dichter Vegetation bedeckten Landmassen gleiten riesige Samenkapseln, die von der einzigartigen Flora des Planeten getragen werden, wie Wolken durch den Himmel."
  pd_lilypad: "Seerosen Welt"
  pd_lilypad_desc: "Die warmen, flachen Ozeane dieses Planeten beherbergen eine lebendige Artenvielfalt. An der Oberfläche bilden robuste Blätter der Wasserflora ein sekundäres oberflächenbasiertes Ökosystem."
+ pd_obsidian: "$pc_pd_obsidian$"
+ pd_obsidian_desc: "$pc_pd_obsidian_desc$"
  pd_geothermal: "Geothermische Welt"
  pd_geothermal_desc: "Auf diesem Planeten entstehen zwischen hoch aufragenden Eisklippen lebhafte tropische Spalten. Unter der Oberfläche erhält eine starke geothermische Aktivität Millionen warmer Becken und sorgt für eine blühende Artenvielfalt."
  pd_biolumen: "Biolumineszierende Welt"
@@ -156,6 +160,8 @@
  pd_crevasse_desc: "Obwohl die Oberfläche dieses gefrorenen Planeten unbewohnbar ist, sorgt die geothermische Energie aus dem Kern des Planeten dafür, dass der Boden der vielen Gletscherspalten dieses Planeten bewohnbar bleibt."
  pd_ice_dunes: "Eisdünen Welt"
  pd_ice_dunes_desc: "Da die Temperaturen fast das ganze Jahr über unter dem Gefrierpunkt liegen, bilden sandähnliche Eispartikel die Dünen dieses Planeten."
+ pd_ferrospring: "$pc_pd_ferrospring$"
+ pd_ferrospring_desc: "$pc_pd_ferrospring_desc$"
  pd_storm: "Sturmwelt"
  pd_storm_desc: "Die Landmassen des Planeten befinden sich an beiden Polen und sind durch einen riesigen Ozean voneinander getrennt, der das ganze Jahr über starke Stürme erzeugt. Aufgrund der extremen Bedingungen befindet sich das meiste Leben des Planeten unter der Meeresoberfläche."
  pd_iceberg: "Eisbergwelt"
