--- a/planetary_diversity/localisation/korean/planetarydiversity_planet_modifiers_l_korean.yml
+++ b/planetary_diversity/localisation/korean/planetarydiversity_planet_modifiers_l_korean.yml
@@ -44,6 +44,8 @@
  pd_algae_desc: "이 행성의 풍부한 얕은 바다와 호수는 화사한 분홍빛 조류가 만발하여 우주에서도 볼 수 있는 놀라운 시각적 장관을 연출합니다."
  pd_columnar: "$pc_pd_columnar$"
  pd_columnar_desc: "$pc_pd_columnar_desc$"
+ pd_tidepool: "$pc_pd_tidepool$"
+ pd_tidepool_desc: "$pc_pd_tidepool_desc$"
  pd_reef: "암초 행성"
  pd_reef_desc: "광활한 얕은 바다가 행성 전체를 감싸고 있어 궤도에서 관찰하면 표면 바로 아래에 상당한 산호초 시스템이 드러납니다. 산호초가 수면을 침범하는 곳에는 산호로 이루어진 섬 사슬이 나타납니다."
  pd_archipelago: "열도 행성"
@@ -66,6 +68,8 @@
  pd_aerial_desc: "울창한 초목에 가려진 육지 위 높은 곳에서 행성의 독특한 식물이 품고 있는 거대한 씨앗 꼬투리가 구름처럼 하늘을 날아다니고 있습니다."
  pd_lilypad: "연잎 행성"
  pd_lilypad: "행성의 따뜻하고 얕은 바다는 활기찬 생물 다양성을 지원합니다. 수면에서는 수생식물의 튼튼한 잎이 이차적인 수면 기반 생태계를 형성합니다."
+ pd_obsidian: "$pc_pd_obsidian$"
+ pd_obsidian_desc: "$pc_pd_obsidian_desc$"
  pd_geothermal: "지열 극지 행성"
  pd_geothermal_desc: "행성에는 우뚝 솟은 얼음 절벽 사이로 활기찬 열대 균열이 생겨납니다. 지표 아래에서는 강력한 지열 활동이 수백만 개의 따뜻한 웅덩이를 유지하며 번성하는 생물 다양성을 키우고 있습니다."
  pd_biolumen: "생체발광 행성"
@@ -156,6 +160,8 @@
  pd_crevasse_desc: "이 얼어붙은 행성의 표면은 열악한 환경이지만, 행성의 핵에서 나오는 지열 에너지는 행성의 수많은 크레바스 바닥에 서식할 수 있는 환경을 유지합니다."
  pd_ice_dunes: "얼음사막 행성"
  pd_ice_dunes_desc: "일 년 내내 영하의 기온으로 모래와 같은 얼음 입자가 이 행성의 얼음 사막을 만듭니다."
+ pd_ferrospring: "$pc_pd_ferrospring$"
+ pd_ferrospring_desc: "$pc_pd_ferrospring_desc$"
  pd_storm: "폭풍 행성"
  pd_storm_desc: "행성의 육지는 양쪽 극에 있으며, 일 년 내내 강력한 폭풍을 일으키는 거대한 바다로 분리되어 있습니다. 극한의 조건으로 인해 행성 생명체의 대부분은 해수면 아래에 있습니다."
  pd_iceberg: "빙산 행성"
