--- a/planetary_diversity/localisation/polish/planetarydiversity_planet_classes_l_polish.yml
+++ b/planetary_diversity/localisation/polish/planetarydiversity_planet_classes_l_polish.yml
@@ -111,6 +111,12 @@
  mod_pc_pd_columnar_habitability: "Ocean Habitability"
  trait_pc_pd_columnar_preference: "Ocean Preference"
  trait_pc_pd_columnar_preference_desc: "$trait_pc_arctic_preference_desc$"
+ pc_pd_tidepool: "Tidepool World"
+ pc_pd_tidepool_desc: "A rocky oceanic world with a nitrogen-oxygen atmosphere and shallow seas. Daily tidal shifts expose vast fields of tidepools, creating dynamic littoral ecosystems that support a diverse array of marine life."
+ pc_pd_tidepool_adj: "shallowed"
+ mod_pc_pd_tidepool_habitability: "Ocean Habitability"
+ trait_pc_pd_tidepool_preference: "Ocean Preference"
+ trait_pc_pd_tidepool_preference_desc: "$trait_pc_arctic_preference_desc$"
  pc_pd_reef: "Świat rafowy"
  pc_pd_reef_desc: "Skalisty świat o klimacie umiarkowanym z atmosferą azotowo-tlenową i znaczną hydrosferą. Płytkie oceany pokrywają ponad 99% powierzchni, a pod powierzchnią można zobaczyć z orbity znaczące systemy raf. Jedyne obszary nad wodą to miejsca, w których system raf urósł na tyle wysoko, że utworzyły rozproszone łańcuchy wysp koralowych."
  pc_pd_reef_adj: "rafowy"
@@ -167,6 +173,13 @@
  mod_pc_pd_lilypad_habitability: "Możliwość zamieszkania świata tropikalnego"
  trait_pc_pd_lilypad_preference: "Preferowany teren: tropiki"
  trait_pc_pd_lilypad_preference_desc: "$trait_pc_arctic_preference_desc$"
+ pc_pd_obsidian: "Obsidian World"
+ pc_pd_obsidian_desc: " pc_pd_obsidian_desc: "This humid world has a nitrogen-oxygen atmosphere and shallow tropical seas bordered by extensive obsidian deposits, with resilient flora established across the volcanic terrain."
+"
+ pc_pd_obsidian_adj: "obsidian"
+ mod_pc_pd_obsidian_habitability: "Tropical Habitability"
+ trait_pc_pd_obsidian_preference: "Tropical Preference"
+ trait_pc_pd_obsidian_preference_desc: "$trait_pc_arctic_preference_desc$"
  pc_pd_geothermal: "Świat geotermalny"
  pc_pd_geothermal_desc: "Zimna, lodowa planeta z tropikalnymi szczelinami, które rozbijają połacie lodu, ogrzewana przez naturalne kominy geotermalne z atmosferą azotowo-tlenową. Hydrosfera składa się ze stopionej wody i pary unoszącej się z otworów wentylacyjnych."
  pc_pd_geothermal_adj: "geotermalny"
@@ -397,6 +410,12 @@
  mod_pc_pd_ice_dunes_habitability: "Możliwość zamieszkania świata arktycznego"
  trait_pc_pd_ice_dunes_preference: "Preferowany teren: arktyczny"
  trait_pc_pd_ice_dunes_preference_desc: "$trait_pc_arctic_preference_desc$"
+ pc_pd_ferrospring: "Ferrosprings World"
+ pc_pd_ferrospring_desc: "Frigid, rocky world with a nitrogen-oxygen atmosphere, its icy crust is fractured by geothermal activity. Subsurface aquifers rich in iron deposits feed surface springs and lakes, staining the waters a deep red against the frozen terrain."
+ pc_pd_ferrospring_adj: "icey"
+ mod_pc_pd_ferrospring_habitability: "Arctic Habitability"
+ trait_pc_pd_ferrospring_preference: "Arctic Preference"
+ trait_pc_pd_ferrospring_preference_desc: "$trait_pc_arctic_preference_desc$"
  pc_pd_storm: "Świat sztormowy"
  pc_pd_storm_desc: "Lodowaty, skalisty świat z atmosferą azotowo-tlenową, ta planeta ma silną hydrosferę. Masy lądowe planety znajdują się na obu biegunach, oddzielone ogromnym oceanem, który przez cały rok generuje potężne burze. Ze względu na ekstremalne warunki większość życia na planecie toczy się pod powierzchnią oceanu."
  pc_pd_storm_adj: "sztormowy"
