--- a/planetary_diversity/localisation/polish/planetarydiversity_planet_modifiers_l_polish.yml
+++ b/planetary_diversity/localisation/polish/planetarydiversity_planet_modifiers_l_polish.yml
@@ -44,6 +44,8 @@
  pd_algae_desc: "W bogatych płytkich morzach i jeziorach tej planety kwitną wspaniałe różowe algi, tworząc oszałamiający spektakl wizualny, który można zobaczyć z kosmosu."
  pd_columnar: "$pc_pd_columnar$"
  pd_columnar_desc: "$pc_pd_columnar_desc$"
+ pd_tidepool: "$pc_pd_tidepool$"
+ pd_tidepool_desc: "$pc_pd_tidepool_desc$"
  pd_reef: "Świat rafowy"
  pd_reef_desc: "Rozległe, płytkie oceany otaczają całą planetę, odsłaniając znaczące systemy raf tuż pod powierzchnią, gdy obserwuje się je z orbity. Łańcuchy wysp zbudowanych z koralowców wyłaniają się tam, gdzie rafy przekraczają linię wodną."
  pd_archipelago: "Świat archipelagowy"
@@ -66,6 +68,8 @@
  pd_aerial_desc: "Wysoko nad lądami pokrytymi gęstą roślinnością kolosalne strąki nasion, unoszone przez wyjątkową florę planety, szybują po niebie jak chmury."
  pd_lilypad: "Świat liliowy"
  pd_lilypad: "Ciepłe, płytkie oceany tej planety wspierają tętniącą życiem różnorodność biologiczną. Na powierzchni mocne liście flory wodnej tworzą wtórny ekosystem powierzchniowy."
+ pd_obsidian: "$pc_pd_obsidian$"
+ pd_obsidian_desc: "$pc_pd_obsidian_desc$"
  pd_geothermal: "Świat geotermalny"
  pd_geothermal_desc: "Na tej planecie pomiędzy wysokimi lodowymi klifami wyłaniają się tętniące życiem tropikalne szczeliny. Pod powierzchnią silna aktywność geotermalna utrzymuje miliony ciepłych basenów, pielęgnując kwitnącą różnorodność biologiczną."
  pd_biolumen: "Świat bioluminescencyjny"
@@ -153,9 +157,11 @@
  pd_ice_spike: "Świat lodowych kolców"
  pd_ice_spike_desc: "Intensywna aktywność tektoniczna pod powierzchnią uderza w głęboką warstwę lodu, tworząc potężne kolce lodowe, które dominują w krajobrazie."
  pd_crevasse: "Świat szczelinowy"
- pd_crevasse_desc: "Chociaż powierzchnia tej zamarzniętej planety jest niegościnna, energia geotermalna z jądra planety sprawia, że ​​dno wielu szczelin tej planety nadaje się do zamieszkania."
+ pd_crevasse_desc: "Chociaż powierzchnia tej zamarzniętej planety jest niegościnna, energia geotermalna z jądra planety sprawia, że dno wielu szczelin tej planety nadaje się do zamieszkania."
  pd_ice_dunes: "Świat lodowych wydm"
  pd_ice_dunes_desc: "Przy temperaturach poniżej zera przez większą część roku, przypominające piasek cząsteczki lodu tworzą na tej planecie wydmy."
+ pd_ferrospring: "$pc_pd_ferrospring$"
+ pd_ferrospring_desc: "$pc_pd_ferrospring_desc$"
  pd_storm: "Świat sztormowy"
  pd_storm_desc: "Masy lądowe planety znajdują się na obu biegunach, oddzielone ogromnym oceanem, który przez cały rok generuje potężne burze. Ze względu na ekstremalne warunki większość życia na planecie toczy się pod powierzchnią oceanu."
  pd_iceberg: "Świat gór lodowych"
