--- a/planetary_diversity/localisation/russian/planetarydiversity_planet_classes_l_russian.yml
+++ b/planetary_diversity/localisation/russian/planetarydiversity_planet_classes_l_russian.yml
@@ -111,6 +111,12 @@
  mod_pc_pd_columnar_habitability: "Ocean Habitability"
  trait_pc_pd_columnar_preference: "Ocean Preference"
  trait_pc_pd_columnar_preference_desc: "$trait_pc_arctic_preference_desc$"
+ pc_pd_tidepool: "Tidepool World"
+ pc_pd_tidepool_desc: "A rocky oceanic world with a nitrogen-oxygen atmosphere and shallow seas. Daily tidal shifts expose vast fields of tidepools, creating dynamic littoral ecosystems that support a diverse array of marine life."
+ pc_pd_tidepool_adj: "shallowed"
+ mod_pc_pd_tidepool_habitability: "Ocean Habitability"
+ trait_pc_pd_tidepool_preference: "Ocean Preference"
+ trait_pc_pd_tidepool_preference_desc: "$trait_pc_arctic_preference_desc$"
  pc_pd_reef: "Мир рифов"
  pc_pd_reef_desc: "Каменистый мир с азотно-кислородной атмосферой и значительной гидросферой. Мелководные океаны покрывают почти 99% поверхности, а находящиеся под поверхностью значительные рифовые системы видны с орбиты. Единственные участки над водой находятся там, где рифовая система выросла достаточно высоко, чтобы создать разрозненные островные цепи кораллов."
  pc_pd_reef_adj: "рифовая"
@@ -167,6 +173,13 @@
  mod_pc_pd_lilypad_habitability: "Приспособленность к тропическим мирам"
  trait_pc_pd_lilypad_preference: "Предпочтение тропических миров"
  trait_pc_pd_lilypad_preference_desc: "$trait_pc_arctic_preference_desc$"
+ pc_pd_obsidian: "Obsidian World"
+ pc_pd_obsidian_desc: " pc_pd_obsidian_desc: "This humid world has a nitrogen-oxygen atmosphere and shallow tropical seas bordered by extensive obsidian deposits, with resilient flora established across the volcanic terrain."
+"
+ pc_pd_obsidian_adj: "obsidian"
+ mod_pc_pd_obsidian_habitability: "Tropical Habitability"
+ trait_pc_pd_obsidian_preference: "Tropical Preference"
+ trait_pc_pd_obsidian_preference_desc: "$trait_pc_arctic_preference_desc$"
  pc_pd_geothermal: "Геотермальный мир"
  pc_pd_geothermal_desc: "Холодная, льдистая планета с тропическими расселинами, разбивающими ледяные просторы, обогреваемая естественными геотермальными источниками с азотно-кислородной атмосферой. Гидросфера представлена талой водой и паром, поднимающимся из жерл."
  pc_pd_geothermal_adj: "геотермальная"
@@ -397,6 +410,12 @@
  mod_pc_pd_ice_dunes_habitability: "Приспособленность к арктическим мирам"
  trait_pc_pd_ice_dunes_preference: "Предпочтение арктических миров"
  trait_pc_pd_ice_dunes_preference_desc: "$trait_pc_arctic_preference_desc$"
+ pc_pd_ferrospring: "Ferrosprings World"
+ pc_pd_ferrospring_desc: "Frigid, rocky world with a nitrogen-oxygen atmosphere, its icy crust is fractured by geothermal activity. Subsurface aquifers rich in iron deposits feed surface springs and lakes, staining the waters a deep red against the frozen terrain."
+ pc_pd_ferrospring_adj: "icey"
+ mod_pc_pd_ferrospring_habitability: "Arctic Habitability"
+ trait_pc_pd_ferrospring_preference: "Arctic Preference"
+ trait_pc_pd_ferrospring_preference_desc: "$trait_pc_arctic_preference_desc$"
  pc_pd_storm: "Мир штормов"
  pc_pd_storm_desc: "Холодный, влажный, каменистый мир с азотно-кислородной атмосферой. Большая часть суши планеты находится на обоих полюсах, разделенных массивным океаном, который круглый год порождает мощные штормы. Из-за экстремальных условий большинство живых организмов планеты можно найти только под поверхностью воды."
  pc_pd_storm_adj: "штормовая"
