--- a/planetary_diversity/localisation/russian/planetarydiversity_planet_modifiers_l_russian.yml
+++ b/planetary_diversity/localisation/russian/planetarydiversity_planet_modifiers_l_russian.yml
@@ -44,6 +44,8 @@
  pd_algae_desc: "Моря и реки этой планеты заполняют розовые, постоянно цветущие водоросли, и это отлично заметно даже из космоса."
  pd_columnar: "$pc_pd_columnar$"
  pd_columnar_desc: "$pc_pd_columnar_desc$"
+ pd_tidepool: "$pc_pd_tidepool$"
+ pd_tidepool_desc: "$pc_pd_tidepool_desc$"
  pd_reef: "Мир рифов"
  pd_reef_desc: "Мелководные океаны покрывают почти 99% поверхности планеты, а находящиеся под поверхностью значительные рифовые системы видны с орбиты. Единственные участки над водой находятся там, где рифовая система выросла достаточно высоко, чтобы создать разрозненные островные цепи кораллов."
  pd_archipelago: "Мир архипелагов"
@@ -66,6 +68,8 @@
  pd_aerial_desc: "На этой планете бывают сезоны со значительными осадками. Высоко над землями, скрытыми густой растительностью, по небу, словно облака, скользят колоссальные стручки семян, рожденные уникальной флорой планеты."
  pd_lilypad: "Кувшинковый мир"
  pd_lilypad: "Планета с тёплыми, мелководными океанами, поддерживающими богатую биосферу. На поверхности прочные листья кувшинок образуют вторичную поверхностную экосистему."
+ pd_obsidian: "$pc_pd_obsidian$"
+ pd_obsidian_desc: "$pc_pd_obsidian_desc$"
  pd_geothermal: "Геотермальный мир"
  pd_geothermal_desc: "На поверхности этой планеты полно ледников, в расселинах которых разместились плотные джунгли. Высокая геотермальная активность в коре создаёт миллионы жерл, подогревающих места концентрации биосферы и выбрасывающих питательные вещества для местной флоры и фауны."
  pd_biolumen: "Биолюминесцентный мир"
@@ -156,6 +160,8 @@
  pd_crevasse_desc: "Почти вся поверхность планеты покрыта льдом и непригодна для жизни. Несмотря на это, геотермальная энергия ядра планеты поддерживает приемлемые условия на дне многочисленных расщелин."
  pd_ice_dunes: "Мир ледяных дюн"
  pd_ice_dunes_desc: "Из-за температуры ниже нуля и особенностей климата большую часть года поверхность планеты покрывают дюны из мелких частиц льда."
+ pd_ferrospring: "$pc_pd_ferrospring$"
+ pd_ferrospring_desc: "$pc_pd_ferrospring_desc$"
  pd_storm: "Мир штормов"
  pd_storm_desc: "Большая часть суши планеты находится на обоих полюсах, разделенных массивным океаном, который круглый год порождает мощные штормы. Из-за экстремальных условий большинство живых организмов планеты можно найти только под поверхностью воды."
  pd_iceberg: "Мир айсбергов"
