--- a/planetary_diversity/localisation/simp_chinese/planetarydiversity_engine_events_l_simp_chinese.yml
+++ b/planetary_diversity/localisation/simp_chinese/planetarydiversity_engine_events_l_simp_chinese.yml
@@ -28,6 +28,7 @@
  pdengine.21.fungal: "$pc_pd_fungal$"
  pdengine.21.aerial: "$pc_pd_aerial$"
  pdengine.21.lilypad: "$pc_pd_lilypad$"
+ pdengine.21.obsidian: "$pc_pd_obsidian$"
  pdengine.21.geothermal: "$pc_pd_geothermal$"
  pdengine.21.biolumen: "$pc_pd_biolumen$"
  pdengine.21.desert: "$pc_desert$"
@@ -66,6 +67,7 @@
  pdengine.21.ice_spike: "$pc_pd_ice_spike$"
  pdengine.21.crevasse: "$pc_pd_crevasse$"
  pdengine.21.ice_dunes: "$pc_pd_ice_dunes$"
+ pdengine.21.ferrospring: "$pc_pd_ferrospring$"
  pdengine.21.storm: "$pc_pd_storm$"
  pdengine.21.iceberg: "$pc_pd_iceberg$"
  pdengine.21.alpine: "$pc_alpine$"
@@ -115,6 +117,7 @@
  pdengine.21.ironsand: "$pc_pd_ironsand$"
  pdengine.21.cactus: "$pc_pd_cactus$"
  pdengine.21.columnar: "$pc_pd_columnar$"
+ pdengine.21.tidepool: "$pc_pd_tidepool$"
  pdengine.21.taiga: "$pc_pd_taiga$"
  pdengine.21.treeline: "$pc_pd_treeline$"
  pdengine.21.marsh: "$pc_pd_marsh$"
