--- a/planetary_diversity/localisation/simp_chinese/planetarydiversity_planet_classes_l_simp_chinese.yml
+++ b/planetary_diversity/localisation/simp_chinese/planetarydiversity_planet_classes_l_simp_chinese.yml
@@ -143,6 +143,13 @@
  mod_pc_pd_lilypad_habitability: "热带星球宜居性"
  trait_pc_pd_lilypad_preference: "热带星球偏好"
  trait_pc_pd_lilypad_preference_desc: "$trait_pc_arctic_preference_desc$"
+ pc_pd_obsidian: "Obsidian World"
+ pc_pd_obsidian_desc: " pc_pd_obsidian_desc: "This humid world has a nitrogen-oxygen atmosphere and shallow tropical seas bordered by extensive obsidian deposits, with resilient flora established across the volcanic terrain."
+"
+ pc_pd_obsidian_adj: "obsidian"
+ mod_pc_pd_obsidian_habitability: "Tropical Habitability"
+ trait_pc_pd_obsidian_preference: "Tropical Preference"
+ trait_pc_pd_obsidian_preference_desc: "$trait_pc_arctic_preference_desc$"
  pc_pd_geothermal: "地热星球"
  pc_pd_geothermal_desc: "拥有氮氧大气层的寒冷冰封星球，有受到天然地热喷口加热的热带裂谷，打破了广袤的冰层。冰雪融水和喷口中袅袅的蒸汽构成了这里的水圈。"
  pc_pd_geothermal_adj: "地热"
@@ -347,6 +354,12 @@
  mod_pc_pd_ice_dunes_habitability: "极地星球宜居性"
  trait_pc_pd_ice_dunes_preference: "极地星球偏好"
  trait_pc_pd_ice_dunes_preference_desc: "$trait_pc_arctic_preference_desc$"
+ pc_pd_ferrospring: "Ferrosprings World"
+ pc_pd_ferrospring_desc: "Frigid, rocky world with a nitrogen-oxygen atmosphere, its icy crust is fractured by geothermal activity. Subsurface aquifers rich in iron deposits feed surface springs and lakes, staining the waters a deep red against the frozen terrain."
+ pc_pd_ferrospring_adj: "icey"
+ mod_pc_pd_ferrospring_habitability: "Arctic Habitability"
+ trait_pc_pd_ferrospring_preference: "Arctic Preference"
+ trait_pc_pd_ferrospring_preference_desc: "$trait_pc_arctic_preference_desc$"
  pc_pd_storm: "风暴星球"
  pc_pd_storm_desc: "拥有氮氧大气层的寒冷岩石星球，此地拥有规模庞大的水圈。主要陆地均分布在两极附近，终年风暴不息的辽阔海洋将它们分隔开来。由于极端的环境条件，生命大都生活在洋面以下。"
  pc_pd_storm_adj: "风暴"
@@ -698,6 +711,12 @@
  mod_pc_pd_columnar_habitability: "海洋星球宜居性"
  trait_pc_pd_columnar_preference: "海洋星球偏好"
  trait_pc_pd_columnar_preference_desc: "$trait_pc_arctic_preference_desc$"
+ pc_pd_tidepool: "Tidepool World"
+ pc_pd_tidepool_desc: "A rocky oceanic world with a nitrogen-oxygen atmosphere and shallow seas. Daily tidal shifts expose vast fields of tidepools, creating dynamic littoral ecosystems that support a diverse array of marine life."
+ pc_pd_tidepool_adj: "shallowed"
+ mod_pc_pd_tidepool_habitability: "Ocean Habitability"
+ trait_pc_pd_tidepool_preference: "Ocean Preference"
+ trait_pc_pd_tidepool_preference_desc: "$trait_pc_arctic_preference_desc$"
  pc_pd_taiga: "泰加林星球"
  pc_pd_taiga_desc: "有着氮氧大气的山地森林星球，水体活跃但温度极低。冬季漫长而寒冷，夏季短暂而凉爽。"
  pc_pd_taiga_adj: "山地"
