--- a/planetary_diversity/localisation/simp_chinese/planetarydiversity_planet_modifiers_l_simp_chinese.yml
+++ b/planetary_diversity/localisation/simp_chinese/planetarydiversity_planet_modifiers_l_simp_chinese.yml
@@ -53,6 +53,8 @@
  pd_aerial_desc: "独特的植物孕育出巨大的种荚，如云般飘荡在植被繁茂的陆地上空。"
  pd_lilypad: "睡莲星球"
  pd_lilypad_desc: "星球上温暖的浅海供养着丰富多样的生命。水生植物强韧的叶片构成了地表的次级生态系统。"
+ pd_obsidian: "$pc_pd_obsidian$"
+ pd_obsidian_desc: "$pc_pd_obsidian_desc$"
  pd_geothermal: "地热星球"
  pd_geothermal_desc: "生机勃勃的热带裂谷散布于高耸的冰崖之间。地表下的强大地热活动维持着数百万个暖池，孕育出繁盛多样的生命形式。"
  pd_biolumen: "生物光星球"
@@ -129,6 +131,8 @@
  pd_crevasse_desc: "尽管冰层表面环境极其恶劣，却有从地核中涌出的热能，在冰层深处塑成了众多条件适宜生存的裂谷。"
  pd_ice_dunes: "冰尘星球"
  pd_ice_dunes_desc: "温度常年低于冰点，冰粒如沙，堆聚成丘。 "
+ pd_ferrospring: "$pc_pd_ferrospring$"
+ pd_ferrospring_desc: "$pc_pd_ferrospring_desc$"
  pd_storm: "风暴星球"
  pd_storm_desc: "主要陆地均分布在两极附近，终年风暴不息的辽阔海洋将它们分隔开来。由于极端的环境条件，生命大都生活在洋面以下。"
  pd_iceberg: "冰山星球"
@@ -268,6 +272,8 @@
  pd_cactus_desc: "$pc_pd_cactus_desc$"
  pd_columnar: "$pc_pd_columnar$"
  pd_columnar_desc: "$pc_pd_columnar_desc$"
+ pd_tidepool: "$pc_pd_tidepool$"
+ pd_tidepool_desc: "$pc_pd_tidepool_desc$"
  pd_taiga: "$pc_pd_taiga$"
  pd_taiga_desc: "$pc_pd_taiga_desc$"
  pd_treeline: "$pc_pd_treeline$"
