--- a/planetary_diversity/localisation/korean/planetarydiversity_engine_events_l_korean.yml
+++ b/planetary_diversity/localisation/korean/planetarydiversity_engine_events_l_korean.yml
@@ -23,6 +23,7 @@
  pdengine.21.kelp: "$pc_pd_kelp$"
  pdengine.21.algae: "$pc_pd_algae$"
  pdengine.21.columnar: "$pc_pd_columnar$"
+ pdengine.21.tidepool: "$pc_pd_tidepool$"
  pdengine.21.reef: "$pc_pd_reef$"
  pdengine.21.archipelago: "$pc_pd_archipelago$"
  pdengine.21.tropical: "$pc_tropical$"
@@ -33,6 +34,7 @@
  pdengine.21.fungal: "$pc_pd_fungal$"
  pdengine.21.aerial: "$pc_pd_aerial$"
  pdengine.21.lilypad: "$pc_pd_lilypad$"
+ pdengine.21.obsidian: "$pc_pd_obsidian$"
  pdengine.21.geothermal: "$pc_pd_geothermal$"
  pdengine.21.biolumen: "$pc_pd_biolumen$"
  pdengine.21.desert: "$pc_desert$"
@@ -74,6 +76,7 @@
  pdengine.21.ice_spike: "$pc_pd_ice_spike$"
  pdengine.21.crevasse: "$pc_pd_crevasse$"
  pdengine.21.ice_dunes: "$pc_pd_ice_dunes$"
+ pdengine.21.ferrospring: "$pc_pd_ferrospring$"
  pdengine.21.storm: "$pc_pd_storm$"
  pdengine.21.iceberg: "$pc_pd_iceberg$"
  pdengine.21.alpine: "$pc_alpine$"
