--- a/planetary_diversity/localisation/korean/planetarydiversity_planet_classes_l_korean.yml
+++ b/planetary_diversity/localisation/korean/planetarydiversity_planet_classes_l_korean.yml
@@ -111,6 +111,12 @@
  mod_pc_pd_columnar_habitability: "Ocean Habitability"
  trait_pc_pd_columnar_preference: "Ocean Preference"
  trait_pc_pd_columnar_preference_desc: "$trait_pc_arctic_preference_desc$"
+ pc_pd_tidepool: "Tidepool World"
+ pc_pd_tidepool_desc: "A rocky oceanic world with a nitrogen-oxygen atmosphere and shallow seas. Daily tidal shifts expose vast fields of tidepools, creating dynamic littoral ecosystems that support a diverse array of marine life."
+ pc_pd_tidepool_adj: "shallowed"
+ mod_pc_pd_tidepool_habitability: "Ocean Habitability"
+ trait_pc_pd_tidepool_preference: "Ocean Preference"
+ trait_pc_pd_tidepool_preference_desc: "$trait_pc_arctic_preference_desc$"
  pc_pd_reef: "암초 행성"
  pc_pd_reef_desc: "대기가 질소와 산소로 조성되었으며 상당한 수권이 존재하는 온화한 암석형 행성입니다. 얕은 바다는 표면의 99% 이상을 덮고 있으며, 궤도에서는 수면 아래에서 중요한 산호초 시스템을 볼 수 있습니다. 물 위의 유일한 지역은 산호초가 흩어져 있는 섬 사슬을 만들 정도로 산호초 시스템이 높게 자란 곳입니다."
  pc_pd_reef_adj: "암초 투성이"
@@ -167,6 +173,13 @@
  mod_pc_pd_lilypad_habitability: "열대 행성 거주 적합도"
  trait_pc_pd_lilypad_preference: "열대 행성 선호"
  trait_pc_pd_lilypad_preference_desc: "$trait_pc_arctic_preference_desc$"
+ pc_pd_obsidian: "Obsidian World"
+ pc_pd_obsidian_desc: " pc_pd_obsidian_desc: "This humid world has a nitrogen-oxygen atmosphere and shallow tropical seas bordered by extensive obsidian deposits, with resilient flora established across the volcanic terrain."
+"
+ pc_pd_obsidian_adj: "obsidian"
+ mod_pc_pd_obsidian_habitability: "Tropical Habitability"
+ trait_pc_pd_obsidian_preference: "Tropical Preference"
+ trait_pc_pd_obsidian_preference_desc: "$trait_pc_arctic_preference_desc$"
  pc_pd_geothermal: "지열 극지 행성"
  pc_pd_geothermal_desc: "열대 균열로 인해 얼음이 갈라지는 차가운 얼음 행성으로, 질소와 산소로 조성된 대기의 자연 지열 통풍구로 가열됩니다. 수권은 녹은 물과 통풍구에서 올라오는 증기로 이루어져 있습니다."
  pc_pd_geothermal_adj: "지열 극지인"
@@ -397,6 +410,12 @@
  mod_pc_pd_ice_dunes_habitability: "극지 행성 거주 적합도"
  trait_pc_pd_ice_dunes_preference: "극지 행성 선호"
  trait_pc_pd_ice_dunes_preference_desc: "$trait_pc_arctic_preference_desc$"
+ pc_pd_ferrospring: "Ferrosprings World"
+ pc_pd_ferrospring_desc: "Frigid, rocky world with a nitrogen-oxygen atmosphere, its icy crust is fractured by geothermal activity. Subsurface aquifers rich in iron deposits feed surface springs and lakes, staining the waters a deep red against the frozen terrain."
+ pc_pd_ferrospring_adj: "icey"
+ mod_pc_pd_ferrospring_habitability: "Arctic Habitability"
+ trait_pc_pd_ferrospring_preference: "Arctic Preference"
+ trait_pc_pd_ferrospring_preference_desc: "$trait_pc_arctic_preference_desc$"
  pc_pd_storm: "폭풍 행성"
  pc_pd_storm_desc: "대기가 질소와 산소로 조성된 냉대 암석형 행성입니다. 이 행성은 강력한 수권을 가지고 있습니다. 이 행성의 육지는 양쪽 극에 있으며, 일 년 내내 강력한 폭풍을 일으키는 거대한 바다로 분리되어 있습니다. 극한의 조건으로 인해 행성 생명체의 대부분은 해수면 아래에 있습니다."
  pc_pd_storm_adj: "폭풍이 부는"
