--- a/planetary_diversity/localisation/spanish/planetarydiversity_planet_modifiers_l_spanish.yml
+++ b/planetary_diversity/localisation/spanish/planetarydiversity_planet_modifiers_l_spanish.yml
@@ -44,6 +44,8 @@
  pd_algae_desc: "This planet's rich shallow seas and lakes support brilliant pink algae blooms, creating a stunning visual spectacle that can be seen from space."
  pd_columnar: "$pc_pd_columnar$"
  pd_columnar_desc: "$pc_pd_columnar_desc$"
+ pd_tidepool: "$pc_pd_tidepool$"
+ pd_tidepool_desc: "$pc_pd_tidepool_desc$"
  pd_reef: "Reef World"
  pd_reef_desc: "Extensive shallow oceans envelop the entire planet, exposing significant reef systems just below the surface when observed from orbit. Coral-made island chains emerge where the reefs breach the waterline."
  pd_archipelago: "Archipelago World"
@@ -66,6 +68,8 @@
  pd_aerial_desc: "High above the landmasses cloaking in dense vegetation, colossal seed pods, borne by the planet's unique flora, glide through the skies like clouds."
  pd_lilypad: "Lilypad World"
  pd_lilypad_desc: "This planet's warm, shallow oceans support vibrant biodiversity. At the surface, sturdy leaves from aquatic flora form a secondary surface-based ecosystem."
+ pd_obsidian: "$pc_pd_obsidian$"
+ pd_obsidian_desc: "$pc_pd_obsidian_desc$"
  pd_geothermal: "Geothermal"
  pd_geothermal_desc: "On this planet, vibrant tropical rifts emerge between towering ice cliffs. Beneath the surface, potent geothermal activity sustains millions of warm pools, nurturing thriving biodiversity."
  pd_biolumen: "Bioluminescent World"
@@ -156,6 +160,8 @@
  pd_crevasse_desc: "While the surface of this frozen planet is inhospitable, geothermal energy from the planet's core keeps the bottom of this planet's many crevasses habitable."
  pd_ice_dunes: "Ice Dunes World"
  pd_ice_dunes_desc: "With temperatures below freezing most of the year, sand-like ice particles create this planet's dunes."
+ pd_ferrospring: "$pc_pd_ferrospring$"
+ pd_ferrospring_desc: "$pc_pd_ferrospring_desc$"
  pd_storm: "Storm"
  pd_storm_desc: "The planet's land masses are found at either pole, separated by a massive ocean that generates powerful storms year-round. Due to the extreme conditions, most of the planet's life is under the ocean's surface."
  pd_iceberg: "Iceberg World"
